# openfhe-benchmarks

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench_runner.py  benchmark.py  profile.sh  test_integration.py
examples/: addition.cpp  bsgs-diagonal-method.cpp  multiplication.cpp  rotation.cpp  simple-diagonal-method.cpp  single-hoisted-bsgs-diagonal-method.cpp  single-hoisted-diagonal-method.cpp  utils.hpp
plots/: bench_runner.py  benchmarker.py  plot_ai.py  run_primitives.py  sweep-benchmarks.py  thread_sweep.py
